--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# LaTeX
+report.aux
+report.fdb_latexmk
+report.fls
+report.log
+report.out
+report.synctex.gz
+report.pdf
+
 models/
 
 # Byte-compiled / optimized / DLL files
